--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">Propster</string>
+
+    <string name="username">Username</string>
+    <string name="email">Email</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="password">Password</string>
+    <string name="confirmed_password">Confirmed Password</string>
+    <string name="register">Register</string>
+    <string name="login">Login</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="forgot_password_button">Forgot Password</string>
+    <string name="back">Back</string>
+    <string name="copyright">Copyrighted by PROPSTER.IO</string>
+
+    <string name="login_error">Username or password is incorrect</string>
+    <string name="forgot_password_error">Email is incorrect</string>
+
 </resources>
