--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Propster.io</string>
+    <string name="app_slogan">Automate Your Property Assets</string>
 
     <string name="username">Username</string>
     <string name="email">Email</string>
@@ -21,10 +22,16 @@
     <string name="add_tenant">Add Tenant</string>
     <string name="skip">Skip</string>
     <string name="properties">Properties</string>
+    <string name="logout">Logout</string>
 
     <string-array name="title">
         <item>Mr</item>
         <item>Ms/Mrs</item>
+    </string-array>
+
+    <string-array name="gender">
+        <item>Male</item>
+        <item>Female</item>
     </string-array>
 
     <string-array name="is_business">
@@ -46,10 +53,11 @@
     <string name="email_label">Email:</string>
     <string name="phone_number_label">Phone Number:</string>
     <string name="title_label">Title:</string>
-    <string name="first_name_label">First Name:</string>
-    <string name="last_name_label">Last Name:</string>
+    <string name="first_name_label">First Name (Given Name):</string>
+    <string name="last_name_label">Last Name (Surname):</string>
     <string name="date_of_birth_label">Date of Birth:</string>
     <string name="is_business_label">Personal/Company:</string>
+    <string name="gender_label">Gender:</string>
 
     <string name="switch_role">Switch Role</string>
     <string name="switch_role_to_tenant">Switch Role To Tenant</string>
