--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="password">Password</string>
     <string name="confirmed_password">Confirmed Password</string>
     <string name="register">Register</string>
+    <string name="create_account">Create Account</string>
     <string name="login">Login</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="forgot_password_button">Forgot Password</string>
@@ -82,7 +83,7 @@
     <string name="is_business_label">Personal/Company:</string>
     <string name="gender_label">Gender:</string>
 
-    <string name="switch_role">Switch Role</string>
+    <string name="switch_role">Change Role</string>
     <string name="switch_role_to_tenant">Switch Role To Tenant</string>
     <string name="switch_role_to_landlord">Switch Role To Landlord</string>
 
@@ -97,6 +98,7 @@
 
     <!-- TOOLBAR -->
     <string name="user">User</string>
+    <string name="user_profile">User Profile</string>
     <string name="notification">Notification</string>
 
     <!-- TAB -->
